<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.MultiSelectListPreference
        android:dialogTitle="@string/email_message_content"
        android:entries="@array/email_content_names"
        android:entryValues="@array/email_content_values"
        android:icon="@drawable/ic_pref_content"
        android:key="email_content"
        android:summary="@string/what_email_contains"
        android:title="@string/email_content" />

    <androidx.preference.EditTextPreference
        android:dialogMessage="@string/device_name_to_show"
        android:icon="@drawable/ic_pref_device"
        android:inputType="textNoSuggestions"
        android:key="device_alias"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/device_name" />

    <androidx.preference.ListPreference
        android:dialogTitle="@string/email_language"
        android:entries="@array/language_names"
        android:entryValues="@array/email_locale_values"
        android:icon="@drawable/ic_pref_language"
        android:key="email_locale"
        android:title="@string/email_message_language" />

    <androidx.preference.SwitchPreference
        android:key="resend_unsent"
        android:title="@string/try_to_resend_unsent" />

    <androidx.preference.SwitchPreference
        android:key="notify_send_success"
        android:title="@string/notify_send_success" />

    <androidx.preference.SwitchPreference
        android:key="mark_processed_sms_as_read"
        android:title="@string/mark_processed_sms_as_read" />

    <androidx.preference.PreferenceCategory
        android:title="@string/remote_control">

        <androidx.preference.SwitchPreference
            android:icon="@drawable/ic_remote"
            android:key="remote_control"
            android:title="@string/allow_control_remotely"
            />

        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_pref_account"
            android:key="remote_control_account"
            android:title="@string/remote_control_account" />

        <androidx.preference.SwitchPreference
            android:key="remote_control_notifications"
            android:title="@string/notify_remote_actions"
            />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
