<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.bopr.android.smailer.ui.preference.EmailPreference
        android:dialogLayout="@layout/editor_email"
        android:dialogMessage="@string/email_address_to_send_email_from"
        android:dialogTitle="@string/outgoing_email_address"
        android:icon="@drawable/ic_pref_account"
        android:inputType="textEmailAddress"
        android:key="sender_account"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/sender" />

    <com.bopr.android.smailer.ui.preference.PasswordPreference
        android:dialogLayout="@layout/editor_password"
        android:dialogMessage="@string/password_of_account_to_send"
        android:dialogTitle="@string/password"
        android:icon="@drawable/ic_pref_password"
        android:key="sender_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/password" />

    <androidx.preference.EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="sender_host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/host" />

    <androidx.preference.EditTextPreference
        android:digits="0123456789"
        android:inputType="textNoSuggestions"
        android:key="sender_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/port" />

    <com.bopr.android.smailer.ui.preference.TestServerPreference
        android:key="test_mail_server"
        android:persistent="false"
        android:widgetLayout="@layout/pref_test_mail_server" />

</androidx.preference.PreferenceScreen>
