<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_text_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"/>

    <ImageButton
        android:id="@+id/button_browse_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_button_select_email_from_contacts"
        android:src="@drawable/account"/>
</LinearLayout>
